# advent2023

./: .gitignore  Cargo.toml  justfile
day1/: Cargo.toml
day1/src/: part1.rs  part2.rs
day10/: Cargo.toml
day10/src/: part1.rs  part2.rs
day11/: Cargo.toml
day11/src/: part1.rs  part2.rs
day12/: Cargo.toml  part_1_results.txt
day12/src/: part1.rs  part2.rs
day13/: Cargo.toml
day13/src/: part1.rs  part2.rs
day14/: Cargo.toml
day14/src/: part1.rs  part2.rs
day15/: Cargo.toml
day15/src/: part1.rs  part2.rs
day16/: Cargo.toml
day16/src/: part1.rs  part2.rs
day17/: Cargo.toml
day17/src/: part1.rs  part2.rs
day18/: Cargo.toml
day18/src/: part1.rs  part2.rs
day19/: Cargo.toml
day19/src/: part1.rs  part2.rs
day2/: Cargo.toml
day2/src/: part1.rs  part2.rs
day20/: Cargo.toml
day20/src/: part1.rs  part2.rs
day21/: Cargo.toml
day21/src/: part1.rs  part2.rs
day22/: Cargo.toml
day22/src/: part1.rs  part2.rs
day23/: Cargo.toml
day23/src/: part1.rs  part2.rs
day24/: Cargo.toml
day24/src/: part1.rs  part2.rs
day25/: Cargo.toml
day25/src/: part1.rs
day3/: Cargo.toml
day3/src/: part1.rs  part2.rs
day4/: Cargo.toml
day4/src/: part1.rs  part2.rs
day5/: Cargo.toml
day5/src/: part1.rs  part2.rs
day6/: Cargo.toml
day6/src/: part1.rs  part2.rs
day7/: Cargo.toml
day7/src/: part1.rs  part2.rs
day8/: Cargo.toml
day8/src/: part1.rs  part2.rs
day9/: Cargo.toml
day9/src/: part1.rs  part2.rs
miette_pretty/: Cargo.toml
miette_pretty/src/: lib.rs
parse/: Cargo.toml
parse/src/: grid.rs  lib.rs  pattern_enum.rs  quick_regex.rs
parse_elem/: Cargo.toml
parse_grid/: Cargo.toml
parse_grid/src/: grid.rs
template/: Cargo.toml
template/src/: part1.rs  part2.rs
util/: Cargo.toml
util/src/: lib.rs  range_set.rs
