[workspace]
resolver = "2"
members = [
    "miette_pretty",
    "parse",
    "template",
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
]

[workspace.dependencies]
itertools = "0.12.0"
rayon = "1.8.0"
glam = "0.24.2"
petgraph = "0.6.4"
indoc = "2.0.4"
fancy-regex = "0.12.0"
miette = { version = "5.10.0", features = ["fancy"] }
counter = "0.5.7"
miette_pretty = { path = "miette_pretty" }
parse = { path = "parse" }
