[workspace]
resolver = "2"
members = [
    "miette_pretty",
    "parse",
    "util",
    "template",
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day18",
    "day19",
    "day20",
    "day21",
    "day22",
    "day23",
]

[workspace.dependencies]
itertools = "0.12.0"
rayon = "1.8.0"
glam = "0.24.2"
petgraph = "0.6.4"
indoc = "2.0.4"
fancy-regex = "0.12.0"
miette = { version = "5.10.0", features = ["fancy"] }
counter = "0.5.7"
num = "0.4.1"
geo = "0.27.0"
elsa = "1.9.0"
miette_pretty = { path = "miette_pretty" }
parse = { path = "parse" }
util = { path = "util" }
