[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam.workspace = true
itertools.workspace = true
petgraph.workspace = true
rayon.workspace = true

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"
