[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette.workspace = true
indoc.workspace = true
petgraph.workspace = true
fancy-regex.workspace = true
miette_pretty.workspace = true
elsa.workspace = true
itertools.workspace = true
thiserror = "1.0.50"
replace_with = "0.1.7"
const-str = "0.5.6"
paste = "1.0.14"

[dev-dependencies]
proptest = "1.4.0"
